@@ -210,7 +210,7 @@ public class ProductDao {
 
     public static void main(String[] args) {
         for (Product a : new ProductDao().searchProducts("s")) {
-            System.out.println(a.getImages().getFirst());
+            System.out.println(a.getImages().get(0).getImageUrl());
         }
     }
 
